--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devpage",
   "version": "0.1.0",
-  "homepage": "https://deryckjackson.github.io/devpage/",
+  "homepage": "https://www.deryck.dev/devpage/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
